[tool.poetry]
name = "language-bender"
version = "0.1.0"
description = ""
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
readme = "README.md"
packages = [{include = "language_bender"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
isort = "^5.12.0"
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
